<resources>
    <string name="app_name">appproject</string>
    <string name="title_activity_editprofile">Edit Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wanna Go?</string>
    <string name="nav_header_subtitle">Find one with similar interest</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Edit Profile</string>
    <string name="menu_slideshow">Request ride</string>
    <string name="menu_tools">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Logout</string>
    <string name="title_activity_main">Request Poll</string>
    <string name="past_button">PAST</string>
    <string name="present_button">PRESENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="destination">Dest :</string>
    <string name="estimated_price">Estimate Price</string>
    <string name="time">Time</string>
    <string name="request">ADD</string>
    <string name="price">Price</string>
    <string name="time_p">Time</string>
    <string name="date">Date</string>
    <string name="date_p">Date</string>
    <string name="x">CLOSE</string>
    <string name="destination_p">Destination</string>
    <string name="seats_left">Seats Left: 4</string>
    <string name="source_p">IIITD Main Gate 1</string>
    <string name="source">Src :</string>
    <string name="traveller">Traveller</string>
    <string name="title_activity_past_poll_activity">past_poll_activity</string>
    <string name="hosted_by">Hosted By</string>

    <string name="input_placeholder">Write a message</string>
    <string name="past_polls">Past Polls</string>
    <string name="request_1">REQUEST</string>
    <string name="chat">CHAT</string>
    <string name="title_activity_about1">About Us</string>
    <string name="title_activity_locattion3">locattion3</string>
</resources>
