<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_r"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:visibility="visible"
    card_view:cardElevation="2dp"
    card_view:cardCornerRadius="10dp"
    android:background="@color/yellow">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_light">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:layout_gravity="right"
        android:id="@+id/close"
        android:layout_margin="@dimen/card_margin"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:textColor="@color/white_greyish"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/card_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/destination"
            android:layout_weight="0.25"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:textColor="@color/white_greyish"
            />
        <TextView
            android:id="@+id/dest_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/destination_p"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:textColor="@color/white_greyish"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/source"
            android:layout_weight="0.25"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:textColor="@color/white_greyish"
            />
        <TextView
            android:id="@+id/src_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/source_p"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:textColor="@color/white_greyish"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/card_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.3">
            <TextView
                android:id="@+id/price_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estimated_price"
                android:textAlignment="center"
                android:textStyle="bold|italic"
                android:textColor="@color/white_greyish"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.3">
            <TextView
                android:id="@+id/time_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAlignment="center"
                android:textStyle="bold|italic"
                android:textColor="@color/white_greyish"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.3">
            <TextView
                android:id="@+id/date_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAlignment="center"
                android:textStyle="bold|italic"
                android:textColor="@color/white_greyish"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/card_margin">
        <TextView
            android:id="@+id/seat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seats_left"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:textColor="@color/white_greyish"/>
        <TextView
            android:id="@+id/hostby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hosted_by"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:textColor="@color/white_greyish"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        >
        <Button
            android:id="@+id/req"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/card_margin"
            android:text="@string/request_1"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            />
        <Button
            android:id="@+id/chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/card_margin"
            android:text="@string/chat"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            />
        <Button
            android:id="@+id/end_journey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/card_margin"
            android:text="END JOURNEY"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            />
    </LinearLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>