<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_r"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:visibility="visible"
    card_view:cardElevation="2dp"
    card_view:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blue_light">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/card_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text= "@string/destination"
                android:layout_weight="0.7"
                android:textAlignment="center"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/dest_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/destination_p"
                android:textAlignment="center"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/card_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.3">
                <TextView
                    android:id="@+id/price_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/estimated_price"
                    android:textAlignment="center"
                    android:textStyle="bold|italic"
                    android:textColor="@color/white"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.3">
                <TextView
                    android:id="@+id/time_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textAlignment="center"
                    android:textStyle="bold|italic"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.3">
                <TextView
                    android:id="@+id/date_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textStyle="bold|italic"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/seat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/traveller"
            android:layout_margin="@dimen/card_margin"
            android:textAlignment="center"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/seat1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/traveller"
            android:layout_margin="@dimen/card_margin"
            android:textAlignment="center"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/seat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/traveller"
            android:layout_margin="@dimen/card_margin"
            android:textAlignment="center"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/seat3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/traveller"
            android:layout_margin="@dimen/card_margin"
            android:textAlignment="center"
            android:textColor="@color/white"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
