<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:visibility="visible"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="10dp"
            android:background="@color/yellow"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/blue_light">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/x"
                    android:layout_gravity="right"
                    android:id="@+id/close"
                    android:layout_margin="@dimen/card_margin"
                    android:textAlignment="center"
                    android:textStyle="bold|italic"
                    android:textColor="@color/white_greyish"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/card_margin">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text= "@string/destination"
                        android:layout_weight="0.7"
                        android:textAlignment="center"
                        android:textStyle="bold|italic"
                        android:textColor="@color/white"
                        />
                    <EditText
                        android:id="@+id/des"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:textAlignment="center"
                        android:textStyle="bold|italic"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/card_margin">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text= "@string/source"
                        android:layout_weight="0.7"
                        android:textAlignment="center"
                        android:textStyle="bold|italic"
                        android:textColor="@color/white"
                        />
                    <EditText
                        android:id="@+id/src"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:textAlignment="center"
                        android:textStyle="bold|italic"
                        android:hint="@string/source_p"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/card_margin">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="0.3">
                        <TextView
                            android:id="@+id/price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/estimated_price"
                            android:textAlignment="center"
                            android:textStyle="bold|italic"
                            android:textColor="@color/yellow"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="0.3">
                        <TextView
                            android:id="@+id/time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/time"
                            android:textAlignment="center"
                            android:textStyle="bold|italic"
                            android:textColor="@color/yellow"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="0.3">
                        <TextView
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textAlignment="center"
                            android:textStyle="bold|italic"
                            android:textColor="@color/yellow"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:id="@+id/add_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request"
                        android:gravity="right"
                        android:layout_margin="@dimen/card_margin"
                        android:textAlignment="center"
                        android:textStyle="bold|italic"
                        android:radius="10dp"/>

                    <Button
                        android:id="@+id/filter_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_margin="@dimen/card_margin"
                        android:radius="10dp"
                        android:text="Filter"
                        android:textAlignment="center"
                        android:textStyle="bold|italic" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:name="com.example.wannago.poll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"
            tools:context=".present_poll_view"
            tools:listitem="@layout/fragment_polls_present" />
    </LinearLayout>
</ScrollView>
